deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certalert
spec:
  selector:
    matchLabels:
      app: certalert
  template:
    metadata:
      labels:
        app: certalert
    spec:
      containers:
        - name: certalert
          image: ghcr.io/containeroo/certalert:latest
          ports:
            - name: http
              containerPort: 8080
          args:
            - serve
            - --config=/config/config.yaml
            - --listen-address=0.0.0.0:8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transfer
              mountPath: /transfer
            - name: certalert-password-file
              mountPath: /certs/certalert.passwords
              subPath: certalert.passwords
            - name: pem-chain-certificate-password
              mountPath: /certs/chain.password
              subPath: chain.password
            - name: jks-certs
              mountPath: /certs/jks
            - name: p7-certs
              mountPath: /certs/p7
            - name: p12-certs
              mountPath: /certs/p12
            - name: pem-certs
              mountPath: /certs/pem
            - name: truststore-certs
              mountPath: /certs/truststore
            - name: additional-jks-certs
              mountPath: /certs/additional-jks-certs
          resources: {}
      volumes:
        - name: config
          configMap:
            name: certalert-config
        - name: transfer
          emptyDir: {}
        - name: certalert-password-file
          secret:
            secretName: certalert-password-file
        - name: pem-chain-certificate-password
          secret:
            secretName: pem-chain-certificate-password
        - name: jks-certs
          configMap:
            name: jks
        - name: p7-certs
          configMap:
            name: p7
        - name: p12-certs
          configMap:
            name: p12
        - name: pem-certs
          configMap:
            name: pem
        - name: truststore-certs
          configMap:
            name: truststore
        - name: additional-jks-certs
          configMap:
            name: additional-jks-certs
