deploy/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certalert
spec:
  template:
    spec:
      volumes:
        - name: certs
          secret:
            secretName: additional-jks-certs
